# CMQ

./: .gitignore  .gitmodules  readme.md
common/: ISerializable.hpp
include/common/: ISerializable.h  cmq_global.h
include/message/: cmq_decoder.h  cmq_encoder.h  cmq_encoder_factory.h  cmq_message.h  cmq_message_global.h  cmq_message_imp.h  cmq_mqtt_packet_encoder.h
message/: cmq_message.hpp
src/message/: cmq_decoder.cpp  cmq_encoder.cpp  cmq_message_imp.cpp
test/message/: CMakeLists.txt  cmqencoder_test.cpp  cmqmessage_test.cpp  cmqmessage_test_global.h  msg_test_main.cpp
